--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "check-exports": "attw --pack . --ignore-rules cjs-resolves-to-esm",
-    "ci": "pnpm run check-format && pnpm run build && pnpm run check-exports && pnpm run lint && pnpm run test"
+    "ci": "pnpm run check-format && pnpm run build && pnpm run check-exports && pnpm run lint && pnpm run test",
+    "local-release": "changeset version && changeset publish",
+    "prepublishOnly": "pnpm run ci"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.15.4",
+    "@changesets/cli": "^2.27.7",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
